# vanilla-extractor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: error.rs  exe_parser.rs  lib.rs  main.rs  vanilla.rs
